Fixed alignment and icon sizes of address bar when in More GTK+ Icons

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_toolbars.scss
@@ -214,9 +214,6 @@
 					url(chrome://userchrome/content/assets/img/profile/0.png)
 				);
 			}
-
-			margin-inline-start: 2px !important;
-			margin-inline-end: 2px !important;
 		}
 	}
 
